Fix margin on flex-container-wrap.

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -131,7 +131,6 @@ body {
     flex-grow: 1;
     height: 100%;
     width: 100%;
-    margin-right: 1em;
     overflow: hidden;
     border-radius: 5px; }
 @media only screen and (max-width: 875px) {
